# object_detection

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/yolov8/lib/yolov8/: yolov8_TargetFollower.py  yolov8_model.py
install/yolov8/share/yolov8/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yolov8/share/yolov8/launch/: launch_yolov8.py
install/yolov8/share/yolov8/scripts/: yolov8_TargetFollower.py
install/yolov8_def/share/yolov8_def/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/yolov8_def/share/yolov8_def/cmake/: ament_cmake_export_libraries-extras.cmake  export_yolov8_def__rosidl_generator_pyExport.cmake  export_yolov8_def__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_yolov8_def__rosidl_typesupport_fastrtps_cExport.cmake  export_yolov8_def__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  yolov8_def__rosidl_typesupport_cExport-noconfig.cmake  yolov8_def__rosidl_typesupport_cppExport.cmake  yolov8_def__rosidl_typesupport_introspection_cExport-noconfig.cmake  yolov8_def__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/yolov8_def/share/yolov8_def/msg/: Boundingboxresult.idl  YoloRawInfo.msg
log/: latest_build
site/en/tutorials/generative/: style_transfer.ipynb
yolov8/: CMakeLists.txt  package.xml
yolov8/launch/: launch_yolov8.py
yolov8_def/: CMakeLists.txt  package.xml
yolov8_def/msg/: TargetOffset.msg
(+28 files in other folders)
