<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov8</name>
  <version>0.0.0</version>
  <description>TODO: 1.sudo apt install python3-pip 2.pip3 install ultralytics</description>
  <maintainer email="sheenavonv.i.p@gmail.com">robotmania</maintainer>
  <license>hallo</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
